<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/happy_birthday"
        android:layout_marginTop="@dimen/marginbt"
        android:textSize="@dimen/textsizemain"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/red"
        android:layout_marginBottom="@dimen/marginbt"
         />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/marginht">
        <TextView
            android:layout_width="@dimen/textviewww"
            android:layout_height="wrap_content"
            android:text="@string/to"
            android:textSize="@dimen/tsmain"
            android:textColor="@color/blue"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/to_id"
            android:inputType="text"
            android:hint="@string/enter_your_friend_name_here"
            android:textColor="@color/black"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/marginht">
        <TextView
            android:layout_width="@dimen/widthmar"
            android:layout_height="wrap_content"
            android:text="@string/from"
            android:textSize="@dimen/tsmain"
            android:textColor="@color/blue"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/from_id"
            android:inputType="text"
            android:hint="@string/enter_your_name_here"
            android:textColor="@color/black"/>

    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/mainedit"
        android:id="@+id/button_id"
        android:onClick="gencard"
        android:text="@string/generatecard"/>
</LinearLayout>